<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="key_pref_nativeyuv">key_pref_nativeyuv</string>
	<string name="key_pref_server">key_pref_server</string>
	<string name="key_pref_local_port">key_pref_local_port</string>
	<string name="key_pref_client">key_pref_client</string>
	<string name="key_pref_remote_addr">key_pref_remote_addr</string>
	<string name="key_pref_remote_port">key_pref_remote_port</string>
   	<string name="key_pref_http_server">key_pref_http_server</string>
	<string name="key_pref_http_local_port">key_pref_http_local_port</string>
	<string name="key_pref_ar_effects">key_pref_ar_effects</string>
	<string name="key_pref_ar_background">key_pref_ar_background</string>
	<string name="key_pref_ar_chromakey">key_pref_ar_chromakey</string>
	<string name="key_pref_dsp_use_filter">key_pref_dsp_use_filter</string>
	<string name="key_pref_dsp_filter">key_pref_dsp_filter</string>
	<string name="key_pref_resolution">key_pref_resolution</string>
	<string name="key_pref_draw_fps">key_pref_draw_fps</string>
	<string name="key_pref_use_java_vj">key_pref_use_java_vj</string>
	<string name="key_ar_effects">key_ar_effects</string>
	<string name="key_ar_max_faces">key_ar_max_faces</string>
	<string name="key_ar_background">key_ar_backround</string>
	<string name="key_ar_hat">key_ar_hat</string>
	<string name="key_ar_coolface">key_ar_coolface</string>
	<string name="key_ar_moustache">key_ar_moustache</string>
	<string name="key_ar_beard">key_ar_beard</string>
	
	<string name="draw_fps">Draw FPS</string>
	<string name="help_draw_fps">Draw the frames per second count over the video view</string>
	<string name="resolution">Resolution</string>
	<string name="help_resolution">Select the resolution of the resulting image</string>
	<string name="use_java_vj">Java Viola-Jones detector</string>
	<string name="use_java_vj_help">Use the custom Viola-Jones face detection algorithm instead of the one provided by the Android platform</string>
	<string name="ar_effects">Ar Effects</string>
	<string name="help_ar_effects">Add visuals to augment the reality</string>
	<string name="ar_max_faces">Max. face count</string>
	<string name="help_ar_max_faces">The maximum number of faces in a picture</string>
	<string name="ar_background">Replace background</string>
	<string name="help_ar_background">Replace the background behing the human body</string>
	<string name="ar_hat">Draw a hat</string>
	<string name="help_ar_hat">Draw a hat over the detected face</string>
	<string name="ar_coolface">Draw a cool face</string>
	<string name="help_ar_coolface">Replace the detected face with a cool one</string>
	<string name="ar_moustache">Draw moustache</string>
	<string name="help_ar_moustache">Draw moustache on top of the detected face</string>
	<string name="ar_beard">Draw beard</string>
	<string name="help_ar_beard">Draw a beard over the detected face</string>
		
	<string name="image_effects">Image Effects</string>
	<string name="use_dsp_filter">Filter Image</string>
	<string name="use_dsp_filter_help">Process image and add visual effects</string>
	<string name="filter_list">List of filters</string>
	<string name="filter_list_help">Choose one of the filters to be applied to image</string>
	
    <string name="hello">Hello World, CameraProcessingTestActivity!</string>
    <string name="app_name">CameraStreaming</string>
    <string name="help_nativeyuv">Use the native library to decode YUV to RGB. Disable this option if you are experiencing problems</string>
	<string name="streaming_on">Stop Streaming</string>
    <string name="streaming_off">Start Streaming</string>
    <string name="frontcam_on">Use Rear Cam</string>
    <string name="frontcam_off">Use Front Cam</string>
    <string name="preferences">Preferences</string>
    <string name="focus">Focus Camera</string>
    
    <string name="device_preferences">Device Preferences</string>
    <string name="nativeyuv">Native YUV2RGB</string>
    
    <string name="tcp_preferences">TCP/IP Preferences</string>
    <string name="start_tcp_server">TCP Server</string>
    <string name="help_start_tcp_server">Stream video over TCP/IP using application own protocol</string>
	<string name="local_port">Local TCP port</string>
	<string name="help_local_port">Select the TCP port on which the video will be streamed</string>
	<string name="remote_addr">Remote server address</string>
	<string name="help_remote_addr">The address of the remote device streaming video to connect to</string>
	<string name="start_tcp_client">TCP Client</string>
    <string name="help_start_tcp_client">Connect to the remote device streaming video to view it locally</string>
	<string name="remote_port">Remote TCP port</string>
	<string name="help_remote_port">Select the TCP port on which the video is streamed on the remote device</string>
	<string name="start_server">Start Server</string>
	<string name="stop_server">Stop Server</string>
	
	<string name="http_preferences">HTTP Preferences</string>
	<string name="start_http_server">HTTP Server</string>
	<string name="help_start_http_server">Stream video over HTTP using MJPG</string>
	<string name="http_local_port">Local HTTP port</string>
	<string name="help_http_local_port">Select the TCP port on which the video will be streamed</string>
</resources>
