<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

	<PreferenceCategory android:title="@string/device_preferences">
		<CheckBoxPreference
			android:key="@string/key_pref_nativeyuv"
			android:title="@string/nativeyuv"
			android:defaultValue="false"
			android:summary="@string/help_nativeyuv"
		/>
		<ListPreference 
		    android:title="@string/resolution"
		    android:summary="@string/help_resolution"
		    android:key="@string/key_pref_resolution"
		    android:defaultValue="320x240"
		    android:entries="@array/resolutions"
		    android:entryValues="@array/resolutions"
		    />
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/image_effects">
		<CheckBoxPreference
			android:key="@string/key_pref_dsp_use_filter"
			android:title="@string/use_dsp_filter"
			android:defaultValue="false"
			android:summary="@string/use_dsp_filter_help"
		/>
		<ListPreference 
		    android:title="@string/filter_list"
		    android:summary="@string/filter_list_help"
		    android:dependency="@string/key_pref_dsp_use_filter"
		    android:key="@string/key_pref_dsp_filter"
		    android:defaultValue="1"
		    android:entries="@array/filter_names"
		    android:entryValues="@array/filter_values"
		    />
		<CheckBoxPreference
			android:key="@string/key_ar_effects"
			android:title="@string/ar_effects"
			android:defaultValue="false"
			android:summary="@string/help_ar_effects"
		/>
		<EditTextPreference
		    android:key="@string/key_ar_max_faces"
		    android:title="@string/ar_max_faces"
		    android:summary="@string/help_ar_max_faces"
		    android:defaultValue="1"
		    android:dependency="@string/key_ar_effects"
		    />
		<CheckBoxPreference
			android:key="@string/key_ar_background"
			android:dependency="@string/key_ar_effects"
			android:title="@string/ar_background"
			android:defaultValue="false"
			android:summary="@string/help_ar_background"
		/>
		<CheckBoxPreference
			android:key="@string/key_ar_hat"
			android:dependency="@string/key_ar_effects"
			android:title="@string/ar_hat"
			android:defaultValue="false"
			android:summary="@string/help_ar_hat"
		/>
		<CheckBoxPreference
			android:key="@string/key_ar_coolface"
			android:dependency="@string/key_ar_effects"
			android:title="@string/ar_coolface"
			android:defaultValue="false"
			android:summary="@string/help_ar_coolface"
		/>
		<CheckBoxPreference
			android:key="@string/key_ar_moustache"
			android:dependency="@string/key_ar_effects"
			android:title="@string/ar_moustache"
			android:defaultValue="false"
			android:summary="@string/help_ar_moustache"
		/>
		<CheckBoxPreference
			android:key="@string/key_ar_beard"
			android:dependency="@string/key_ar_effects"
			android:title="@string/ar_beard"
			android:defaultValue="false"
			android:summary="@string/help_ar_beard"
		/>
		
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/tcp_preferences">
		<CheckBoxPreference
		    android:key="@string/key_pref_server"
		    android:title="@string/start_tcp_server"
		    android:defaultValue="true"
		    android:summary="@string/help_start_tcp_server"
		    />
		<EditTextPreference
		    android:key="@string/key_pref_local_port"
		    android:title="@string/local_port"
		    android:defaultValue="8082"
		    android:summary="@string/help_local_port"/>
		<CheckBoxPreference
		    android:key="@string/key_pref_client"
		    android:title="@string/start_tcp_client"
		    android:defaultValue="true"
		    android:summary="@string/help_start_tcp_client"
		    />
		<EditTextPreference
		    android:key="@string/key_pref_remote_addr"
		    android:title="@string/remote_addr"
		    android:defaultValue="127.0.0.1"
		    android:summary="@string/help_remote_addr"/>
		<EditTextPreference
		    android:key="@string/key_pref_remote_port"
		    android:title="@string/remote_port"
		    android:defaultValue="8082"
		    android:summary="@string/help_remote_port"/>
	</PreferenceCategory>
	
	<PreferenceCategory android:title="@string/http_preferences">
		<CheckBoxPreference
		    android:key="@string/key_pref_http_server"
		    android:title="@string/start_http_server"
		    android:defaultValue="true"
		    android:summary="@string/help_start_http_server"
		    />
		<EditTextPreference
		    android:key="@string/key_pref_http_local_port"
		    android:title="@string/http_local_port"
		    android:defaultValue="8080"
		    android:summary="@string/help_http_local_port"/>
	</PreferenceCategory>
</PreferenceScreen>