<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:id="@+id/main_view" >

    <LinearLayout
        android:id="@+id/controls"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/switch_streaming"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/streaming_off"
                android:textOn="@string/streaming_on" />

            <ToggleButton
                android:id="@+id/switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/frontcam_off"
                android:textOn="@string/frontcam_on" />
            
            <Button
                android:id="@+id/pref_button"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/preferences" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <VideoView
            android:id="@+id/view_local"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <VideoView
            android:id="@+id/view_remote"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </LinearLayout>

</LinearLayout>